Improve doc rendering #37
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>