@@ -17,6 +17,7 @@ package net.splitcells.gel.editor.geal.runners;
 
 import lombok.Getter;
 import lombok.val;
+import net.splitcells.dem.data.set.list.List;
 import net.splitcells.dem.lang.tree.Tree;
 import net.splitcells.gel.editor.Editor;
 import net.splitcells.gel.editor.geal.FunctionCallRecord;
@@ -25,6 +26,7 @@ import net.splitcells.gel.editor.geal.lang.FunctionCallDesc;
 import java.util.Optional;
 import java.util.function.Function;
 
+import static net.splitcells.dem.data.set.list.Lists.list;
 import static net.splitcells.dem.lang.namespace.NameSpaces.SEW;
 import static net.splitcells.dem.lang.tree.TreeI.tree;
 import static net.splitcells.dem.utils.StringUtils.intToOrdinal;
@@ -61,60 +63,88 @@ public class FunctionCallRunnerParser<T> {
      * @param context
      * @return
      */
-    public Tree document(Editor context) {
+    public Tree document(Editor context, ParserDocumentConfig config) {
         try (val fcr = context.functionCallRecord(null, null, name, variation, true)) {
             parser.apply(fcr);
             val functionCallDoc = tree("chapter", SEW);
-            functionCallDoc.withChild(tree("title", SEW).withText(intToOrdinal(fcr.getVariation()) + " " + fcr.getName()));
-            val list = tree("list", SEW).withParent(functionCallDoc);
-            list.withProperty("name", "Receiver Constraints:");
+            if (config.isRenderVariation()) {
+                functionCallDoc.withChild(tree("title", SEW).withText(fcr.getName() + " the " + intToOrdinal(fcr.getVariation())));
+            } else {
+                functionCallDoc.withChild(tree("title", SEW).withText(fcr.getName()));
+            }
+            final List<Tree> receiverConstraints = list();
             if (fcr.getRequireSubjectAbsent()) {
-                list.withChild(tree("item", SEW).withText("No Receiver"));
+                receiverConstraints.add(tree("item", SEW).withText("No Receiver"));
             } else if (fcr.getRequiredSubjectTypes().size() == 1) {
-                list.withChild(tree("item", SEW).withText("The receiver has to be of type "
-                        + fcr.getRequiredSubjectTypes().get(0).getSimpleName() + "."));
+                receiverConstraints.add(tree("item", SEW).withText("The receiver has to be of type "
+                        + fcr.getRequiredSubjectTypes().getFirst().getSimpleName() + "."));
             } else if (fcr.getRequiredSubjectTypes().hasElements()) {
                 val typesDescription = fcr.getRequiredSubjectTypes()
                         .stream()
                         .map(Class::getSimpleName)
                         .reduce((a, b) -> a + ", " + b)
                         .orElseThrow();
-                list.withChild(tree("item", SEW).withText("The receiver has to be one of the following types: " + typesDescription));
+                receiverConstraints.add(tree("item", SEW).withText("The receiver has to be one of the following types: " + typesDescription));
             }
-            if (fcr.getRequiredArgumentCount() != -1) {
-                list.withChild(tree("item", SEW).withText("Exactly " + fcr.getRequiredArgumentCount() + " arguments have to be present."));
-            }
-            if (fcr.getRequiredMinimalArgumentCount() != -1) {
-                list.withChild(tree("item", SEW).withText("At least " + fcr.getRequiredMinimalArgumentCount() + " arguments have to be present."));
-            }
-            if (fcr.getOnlyAttributesAsArgument()) {
-                tree("list", SEW).withParent(functionCallDoc).withText("Only attribute references are allowed as arguments.");
+            if (receiverConstraints.hasElements()) {
+                tree("list", SEW)
+                        .withParent(functionCallDoc)
+                        .withProperty("name", SEW, "Receiver Constraints:")
+                        .withChildren(receiverConstraints);
             } else {
-                val arguments = tree("list", SEW).withParent(functionCallDoc);
-                arguments.withProperty("name", "Parameters:");
-                fcr.argumentIndexes().forEach(i -> {
-                    final String validValues;
-                    final String validValuesDesc;
-                    if (fcr.getArgumentsValidNames().hasKey(i)) {
-                        validValues = fcr.getArgumentsValidNames().get(i).stream().reduce((a, b) -> a + ", " + b).orElse("");
-                    } else {
-                        validValues = "";
-                    }
-                    if (!validValues.isEmpty()) {
-                        validValuesDesc = " : valid values = " + validValues;
-                    } else {
-                        validValuesDesc = "";
-                    }
-                    arguments.withChild(tree("item", SEW).withText(i
-                            + ": type = "
-                            + fcr.getArgumentTypes().get(i).getSimpleName()
-                            + validValuesDesc));
-                });
-                if (fcr.getOnlyAttributesAsArgumentsFrom() != -1) {
-                    arguments.withChild(tree("item", SEW).withText("Starting with index " + fcr.getOnlyAttributesAsArgumentsFrom() + " a arbitrary number of only attribute arguments are accepted."));
+                tree("list", SEW).withParent(functionCallDoc).withProperty("name", SEW, "No Receiver Constraints.");
+            }
+            val arguments = tree("list", SEW).withParent(functionCallDoc);
+            arguments.withProperty("name", SEW, parameterTitle(fcr));
+            fcr.argumentIndexes().forEach(i -> {
+                final String validValues;
+                final String validValuesDesc;
+                if (fcr.getArgumentsValidNames().hasKey(i)) {
+                    validValues = fcr.getArgumentsValidNames().get(i).stream().reduce((a, b) -> a + ", " + b).orElse("");
+                } else {
+                    validValues = "";
                 }
+                if (!validValues.isEmpty()) {
+                    validValuesDesc = " : valid values = " + validValues;
+                } else {
+                    validValuesDesc = "";
+                }
+                arguments.withChild(tree("item", SEW).withText(i
+                        + ": type = "
+                        + fcr.getArgumentTypes().get(i).getSimpleName()
+                        + validValuesDesc));
+            });
+            if (fcr.getOnlyAttributesAsArgumentsFrom() != -1) {
+                arguments.withChild(tree("item", SEW).withText("Starting with index " + fcr.getOnlyAttributesAsArgumentsFrom() + " an arbitrary number of only attribute arguments are accepted."));
             }
             return functionCallDoc;
         }
+    }
+
+    private static String parameterTitle(FunctionCallRecord fcr) {
+        var parameterComment = "";
+        if (fcr.getRequiredArgumentCount() != -1) {
+            if (!parameterComment.isBlank()) {
+                parameterComment += " ";
+            }
+            parameterComment += "Exactly " + fcr.getRequiredArgumentCount() + " arguments have to be present.";
+        }
+        if (fcr.getRequiredMinimalArgumentCount() != -1) {
+            if (!parameterComment.isBlank()) {
+                parameterComment += " ";
+            }
+            parameterComment += "At least " + fcr.getRequiredMinimalArgumentCount() + " arguments have to be present.";
+        }
+        if (fcr.getOnlyAttributesAsArgument()) {
+            if (!parameterComment.isBlank()) {
+                parameterComment += " ";
+            }
+            parameterComment += "Only attribute references are allowed as arguments.";
+        }
+        var parameterTitle = "Parameters:";
+        if (!parameterComment.isBlank()) {
+            parameterTitle += " " + parameterComment;
+        }
+        return parameterTitle;
     }
 }
